[package]
name = "lym_cli"
version = "1.0.0"
edition = "2021"

[lib]
name = "lym_cli"
path = "./src/lib.rs"

[[bin]]
name = "lym"
path = "./src/main.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive", "color", "suggestions", "wrap_help"] }
chrono = "0.4.33"
reqwest = "0.11.24"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
eval = "0.4.3"
