[package]
name = "lym_cli"
version = "1.1.0"
edition = "2021"

[lib]
name = "lym_cli"
path = "./src/lib.rs"

[[bin]]
name = "lym"
path = "./src/main.rs"

[dependencies]
reqwest = "0.11.24"
chrono = "0.4.33"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
eval = "0.4.3"
rand = "0.8"
clap = { version = "4.5.1", features = [
    "derive",
    "color",
    "suggestions",
    "wrap_help",
] }
